examples/test/testpolicy3978.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3978
  namespace: namespace395
spec:
  podSelector:
    matchLabels:
      key16: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value28
      podSelector:
        matchLabels:
          key40: value48
          key30: value27
          key43: value36
